changing to Map Struct