@@ -1,30 +1,36 @@
 package com.dev.foo.footalentpet.service.impl;
 
-import com.dev.foo.footalentpet.helper.GenericMapperUtil;
+import com.dev.foo.footalentpet.mapper.UserDTOMapper;
+import com.dev.foo.footalentpet.model.entity.User;
 import com.dev.foo.footalentpet.model.response.UserResponseDTO;
 import com.dev.foo.footalentpet.repository.UserRepository;
 import com.dev.foo.footalentpet.service.UserService;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class UserServiceImpl implements UserService {
 
-    private final UserRepository userRepository;
-    private final GenericMapperUtil mapperUtil;
+    @Autowired
+    private  UserRepository userRepository;
+    @Autowired
+    private UserDTOMapper userDTOMapper;
 
 
 
     @Override
     public List<UserResponseDTO> getAllUsers() {
-        return userRepository.findAll()
-                .stream()
-                .map(UserResponseDTO::new)
-                .toList();
+        List<User> userList = userRepository.findAll();
+        return userList.stream()
+                .map(userDTOMapper::userToUserResponseDto)
+                .collect(Collectors.toList());
     }
 
 
